--- a/tamairethread/WEB-INF/web.xml
+++ b/tamairethread/WEB-INF/web.xml
@@ -28,5 +28,18 @@
 	
 	
 	
+	<servlet>
+		<servlet-name>tuyoi</servlet-name>
+		<jsp-file>/tuyoi.jsp</jsp-file>
+	</servlet>
+	
+	
+	<servlet-mapping>
+		<servlet-name>tuyoi</servlet-name>
+		<url-pattern>/tuyoi</url-pattern>
+	</servlet-mapping>
+	
+	
+	
 	
 </web-app>
