--- a/tamairethread/WEB-INF/web.xml
+++ b/tamairethread/WEB-INF/web.xml
@@ -64,7 +64,7 @@
 	
 	<servlet>
 		<servlet-name>Home</servlet-name>
-		<jsp-file>/home.jsp</jsp-file>
+		<jsp-file>/index.jsp</jsp-file>
 	</servlet>
 	
 	
